...
                                      fit: BoxFit.contain,
                                    ),
                                  ),
                                  SizedBox(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: const ValueKey('signup-username_req5'),
                                      controller:
                                          _model.signupUsernameTextController,
                                      focusNode: _model.signupUsernameFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.signupUsernameTextController',
                                        const Duration(milliseconds: 2000),
...
                                          .asValidator(context),
                                    ),
                                  ),
                                  SizedBox(
                                    width: 200.0,
                                    child: TextFormField(
                                      key: const ValueKey('signup-email_di2a'),
                                      controller:
                                          _model.signupEmailTextController,
                                      focusNode: _model.signupEmailFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.signupEmailTextController',
                                        const Duration(milliseconds: 2000),
...
                                          .asValidator(context),
                                    ),
                                  ),
                                  SizedBox(
                                    width: 200.0,
                                    child: TextFormField(
                                      key: const ValueKey('signup-password_neis'),
                                      controller:
                                          _model.signupPasswordTextController,
                                      focusNode: _model.signupPasswordFocusNode,
                                      autofocus: false,
                                      textInputAction: TextInputAction.next,
                                      obscureText:
...
                                    ),
                                  ),
                                  SizedBox(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: const ValueKey(
                                          'Singup-ConfirmPassword_5eb4'),
                                      controller: _model
                                          .singupConfirmPasswordTextController,
                                      focusNode:
                                          _model.singupConfirmPasswordFocusNode,
                                      autofocus: false,
                                      textInputAction: TextInputAction.done,
...
                                    ),
                                  ),
                                  Padding(
                                    padding: const EdgeInsetsDirectional.fromSTEB(
                                        0.0, 8.0, 0.0, 0.0),
                                    child: FFButtonWidget(
                                      key: const ValueKey('signup-button_e7e8'),
                                      onPressed: () async {
                                        logFirebaseEvent(
                                            'SIGN_UP_PAGE_signup-button_ON_TAP');
                                        logFirebaseEvent(
                                            'signup-button_validate_form');
                                        if (_model.formKey.currentState ==
...
                                      logFirebaseEvent(
                                          'SIGN_UP_ALREADY_HAVE_AN_ACCOUNT_LOGIN_BT');
                                      logFirebaseEvent('Button_navigate_to');

                                      context.goNamed('Login');
                                    },
                                    text: 'Already Have An Account? Login!',
                                    options: FFButtonOptions(
                                      height: 40.0,
                                      padding: const EdgeInsetsDirectional.fromSTEB(
                                          16.0, 0.0, 16.0, 0.0),
                                      iconPadding:
                                          const EdgeInsetsDirectional.fromSTEB(
...
