...
                                          ),
                                        ),
                                      ),
                                      SizedBox(
                                        width: 200.0,
                                        child: TextFormField(
                                          key: const ValueKey('login-email_zsbl'),
                                          controller:
                                              _model.loginEmailTextController,
                                          focusNode: _model.loginEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
                                            '_model.loginEmailTextController',
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      SizedBox(
                                        width: 200.0,
                                        child: TextFormField(
                                          key: const ValueKey('login-password_92ml'),
                                          controller: _model
                                              .loginPasswordTextController,
                                          focusNode:
                                              _model.loginPasswordFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.next,
...
                                            decoration: const BoxDecoration(),
                                            child: Padding(
                                              padding: const EdgeInsetsDirectional
                                                  .fromSTEB(0.0, 8.0, 0.0, 0.0),
                                              child: FFButtonWidget(
                                                key: const ValueKey(
                                                    'login-button_dhsu'),
                                                onPressed: () async {
                                                  logFirebaseEvent(
                                                      'LOGIN_PAGE_login-button_ON_TAP');
                                                  logFirebaseEvent(
                                                      'login-button_validate_form');
                                                  if (_model.formKey
...
                                              ),
                                            ),
                                          ),
                                        ),
                                      ),
                                      FFButtonWidget(
                                        key: const ValueKey('toSignUpButton_4izg'),
                                        onPressed: () async {
                                          logFirebaseEvent(
                                              'LOGIN_PAGE_toSignUpButton_ON_TAP');
                                          logFirebaseEvent(
                                              'toSignUpButton_navigate_to');

                                          context.pushNamed('SignUp');
                                        },
                                        text: 'Don\'t Have An Account? Signup!',
                                        options: FFButtonOptions(
                                          height: 40.0,
                                          padding:
                                              const EdgeInsetsDirectional.fromSTEB(
                                                  16.0, 0.0, 16.0, 0.0),
                                          iconPadding:
...
